# tup25-p4

tp/61472 - Díaz, Julieta Camila/tp6/backend/: database.py  main.py  models.py  productos.json  pyproject.toml  pytest.ini  security.py
tp/61472 - Díaz, Julieta Camila/tp6/backend/app/: auth.py  db.py
tp/61472 - Díaz, Julieta Camila/tp6/backend/app/routers/: cart.py  products.py  users.py
tp/61472 - Díaz, Julieta Camila/tp6/backend/models/: __init__.py  productos.py  users.py
tp/61472 - Díaz, Julieta Camila/tp6/backend/routes/: auth.py  carrito.py  compras.py  productos.py
tp/61472 - Díaz, Julieta Camila/tp6/backend/tests/: test_cart.py  test_users.py
tp/61472 - Díaz, Julieta Camila/tp6/frontend/app/: layout.tsx  page.tsx  types.ts
tp/61472 - Díaz, Julieta Camila/tp6/frontend/app/checkout/: page.tsx
tp/61472 - Díaz, Julieta Camila/tp6/frontend/app/components/: ShoppingCardSidebar.tsx
tp/61472 - Díaz, Julieta Camila/tp6/frontend/app/compras/: page.tsx
tp/61472 - Díaz, Julieta Camila/tp6/frontend/app/confirmar/: page.tsx
tp/61472 - Díaz, Julieta Camila/tp6/frontend/app/context/: AuthContext.tsx  CartContext.tsx
tp/61472 - Díaz, Julieta Camila/tp6/frontend/app/login/: page.tsx
tp/61472 - Díaz, Julieta Camila/tp6/frontend/app/registrar/: page.tsx
tp/61472 - Díaz, Julieta Camila/tp6/frontend/app/services/: auth.ts  cart.ts  productos.ts
tp/61472 - Díaz, Julieta Camila/tp6/frontend/components/: NavBar.tsx
tp/61472 - Díaz, Julieta Camila/tp6/frontend/history/: page.tsx
tp/61472 - Díaz, Julieta Camila/tp6/frontend/history/[id]/: page.tsx
(+4 files in other folders)
